--- a/web/themes/custom/drucal_theme/css/site.pcss
+++ b/web/themes/custom/drucal_theme/css/site.pcss
@@ -18,3 +18,44 @@
 .calendar-view-pager .pager__item > * {
   padding: 0;
 }
+
+[data-calendar-view] caption {
+  position: absolute !important;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+  width: 1px;
+  height: 1px;
+  word-wrap: normal;
+}
+
+.view-style-calendar-view {
+  display: grid;
+  grid-template-areas:
+        "header pager"
+        "sidebar content"
+        "footer footer";
+  row-gap: 0.25rem;
+  column-gap: 2rem;
+  grid-auto-rows: minmax(1rem, auto);
+  grid-template-columns: 0.5fr 2.5fr;
+
+  .view-header {
+    grid-area: header;
+  }
+  .view-footer {
+    grid-area: footer;
+  }
+  .calendar-view-pager {
+    grid-area: pager;
+  }
+  .view-filters {
+    grid-area: sidebar;
+  }
+  .view-content {
+    grid-area: content;
+  }
+
+  .pager__items {
+    margin: 0;
+  }
+}
