--- a/web/themes/custom/drucal_theme/templates/views/views-view--style--calendar.html.twig
+++ b/web/themes/custom/drucal_theme/templates/views/views-view--style--calendar.html.twig
@@ -9,8 +9,8 @@
 {%
   set classes = [
     'view',
-    'view-' ~ id|clean_class,
-    'view-id-' ~ id,
+    'view-id' ~ id|clean_class,
+    'view-style-calendar-view',
     'view-display-id-' ~ display_id,
     dom_id ? 'js-view-dom-id-' ~ dom_id,
   ]
