--- a/web/themes/custom/drucal_theme/templates/views/views-view--style--calendar.html.twig
+++ b/web/themes/custom/drucal_theme/templates/views/views-view--style--calendar.html.twig
@@ -6,6 +6,8 @@
  * @see template_preprocess_views_view()
  */
 #}
+{{ attach_library('drucal_theme/autoscrolltoday') }}
+
 {%
   set classes = [
     'view',
