--- a/web/themes/custom/drucal_theme/css/site.css
+++ b/web/themes/custom/drucal_theme/css/site.css
@@ -22,45 +22,58 @@
   padding:0;
 }
 
-[data-calendar-view] caption{
-  position:absolute !important;
-  overflow:hidden;
-  clip:rect(1px, 1px, 1px, 1px);
-  width:1px;
-  height:1px;
-  word-wrap:normal;
-}
+.calendar-view-table caption{
+    position:absolute !important;
+    overflow:hidden;
+    clip:rect(1px, 1px, 1px, 1px);
+    width:1px;
+    height:1px;
+    word-wrap:normal;
+  }
 
+.calendar-view-table td.selection,
+  .calendar-view-table td[data-calendar-view-today]{
+    border-width:2px;
+    border-color:var(--calendar-view-color-evil);
+  }
+
+.calendar-view-table td.selection{
+    border-style:dashed;
+  }
 .view-style-calendar-view{
   display:grid;
-  grid-template-areas:"header pager" "sidebar content" "footer footer";
+  grid-template-areas:"header pager" "messages messages" "sidebar content" "footer footer";
   row-gap:0.25rem;
   -moz-column-gap:2rem;
        column-gap:2rem;
   grid-auto-rows:minmax(1rem, auto);
   grid-template-columns:0.5fr 2.5fr;
 }
-
+.view-style-calendar-view .messages-list{
+    grid-area:messages;
+  }
 .view-style-calendar-view .view-header{
     grid-area:header;
   }
-
 .view-style-calendar-view .view-footer{
     grid-area:footer;
   }
-
 .view-style-calendar-view .calendar-view-pager{
     grid-area:pager;
   }
-
 .view-style-calendar-view .view-filters{
     grid-area:sidebar;
   }
-
+.view-style-calendar-view .view-filters .views-exposed-form{
+      position:sticky;
+      top:0;
+    }
 .view-style-calendar-view .view-content{
     grid-area:content;
   }
-
 .view-style-calendar-view .pager__items{
     margin:0;
+  }
+.view-style-calendar-view .feed-icons{
+    grid-area:footer;
   }
