--- a/web/themes/custom/drucal_theme/css/site.pcss
+++ b/web/themes/custom/drucal_theme/css/site.pcss
@@ -29,13 +29,35 @@
     word-wrap: normal;
   }
 
-  td.selection,
-  td[data-calendar-view-today] {
+  tr {
+    border-width: 0;
+  }
+
+  /** Mobile (e.g. 48rem = 768px) **/
+  @media (min-width: 48rem) {
+    thead tr,
+    th:first-child {
+      border-top-left-radius: var(--gin-border-l);
+    }
+    thead tr,
+    th:last-child {
+      border-top-right-radius: var(--gin-border-l);
+    }
+    tr:last-child td:first-child {
+      border-bottom-left-radius: var(--gin-border-l);
+    }
+    tr:last-child td:last-child {
+      border-bottom-right-radius: var(--gin-border-l);
+    }
+  }
+
+  td[data-calendar-view-today],
+  td[data-calendar-view-selected] {
     border-width: 2px;
     border-color: var(--calendar-view-color-evil);
   }
 
-  td.selection {
+  td[data-calendar-view-selected] {
     border-style: dashed;
   }
 }
